tests/fixtures/errors/e0303_wire_in_repeat.mimz
// expect: E0303
module M {
  out y: bits[4]
  repeat i: 0..4 {
    wire w: bit = 0
    y[i] = w
  }
}
